<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.agosto.iotcoreprovisioning.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#eeeeee"
    >

    <com.google.android.gms.common.SignInButton
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:id="@+id/email"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="chris.davis@agosto.com"
        />

    <RelativeLayout
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/projectDetails"
        android:layout_below="@+id/email"
        android:paddingLeft="16dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="4dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/projectIdLabel"
            android:layout_margin="8dp"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project"
            />


        <TextView
            android:textColor="@color/colorPrimary"
            android:visibility="visible"
            android:drawableRight="@drawable/pencil"
            android:layout_toRightOf="@+id/projectIdLabel"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:id="@+id/projectId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:padding="4dp"
            android:textSize="14sp"
            android:textAlignment="inherit"
            />

        <AutoCompleteTextView
            android:textSize="14sp"
            android:visibility="gone"
            android:layout_toRightOf="@+id/projectIdLabel"
            android:layout_margin="8dp"
            android:id="@+id/projectIdauto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:padding="4dp"
            android:layout_below="@+id/projectIdLabel"
            android:layout_alignParentLeft="true"
            android:id="@+id/registryLabel"
            android:layout_margin="8dp"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registry"
            />

        <Spinner
            android:layout_below="@+id/projectIdLabel"
            android:layout_toRightOf="@+id/projectIdLabel"
            android:layout_margin="8dp"
            android:id="@+id/registry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_below="@+id/projectIdLabel"
            android:layout_toRightOf="@+id/projectIdLabel"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:visibility="gone"
            android:text="@string/no_registries_found"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorAccent"
            android:id="@+id/registryError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_below="@id/projectDetails"
        android:background="#fff"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:clipToPadding="false"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
